Redux and local card DB setup

--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
     -->
     <title>ONE PIECE TCG Collection Manager</title>
   </head>
-  <body>
+  <body class="awsui-dark-mode awsui-compact-mode">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
